Добавлена система открытия закрытых предметов в инвентаре.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,6 +70,8 @@
      <Compile Include="Assets\Scripts\MapPerlinNoise.cs" />
      <Compile Include="Assets\Scripts\Turret.cs" />
      <Compile Include="Assets\Scripts\BuildManager.cs" />
+     <Compile Include="Assets\Open item\BaseScript.cs" />
+     <Compile Include="Assets\Open item\PlaceBlockScript.cs" />
  <Reference Include="UnityEngine">
  <HintPath>C:/Program Files/Unity 2020.3.21f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
  </Reference>
